--- a/2.html
+++ b/2.html
@@ -1,5 +1,5 @@
 <html>
     <h1>pajina2</h1>
-    <a>pajina1</a>
-    <a>index</a>
+    <a href="1.html">pajina1</a>
+    <a href="index.html">index</a>
 </html>
