--- a/1.html
+++ b/1.html
@@ -1,5 +1,5 @@
 <html>
     <h1>pajina1</h1>
-    <a>index</a>
-    <a>pajina2</a>
+    <a href="index.html">index</a>
+    <a href="2.html">pajina2</a>
 </html>
