--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <h1>index</h1>
-    <a>pajina1</a>
-    <a>pajina2</a>
+    <h1 href="index.html">index</h1>
+    <a href="1.html">pajina1</a>
+    <a href="2.html">pajina2</a>
 </html>
